fixed trbme import

--- a/make_figures/main_paper_figs.ipynb
+++ b/make_figures/main_paper_figs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
     "\n",
     "from main_paper_figs_utils import *\n",
     "import Go2SAXS as gs\n",
-    "sys.path.append('../BME')\n",
+    "sys.path.append('..')\n",
     "import trBME as trbme\n",
     "import BME as bme\n"
    ]
