Added env.yml and updated pkl

--- a/make_figures/main_paper_figs.ipynb
+++ b/make_figures/main_paper_figs.ipynb
@@ -327,12 +327,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "rw[key] = trbme.TimeResolvedBME(esaxs_dir=esaxs, meta_saxs=msaxs, bfile=bfile)\n",
-    "rw[key].save_results(data_dir+'/'+'rw_results/dyn.pkl')\n",
+    "rw[key].save_results(data_dir+'/'+'rw_results/dyn')\n",
     "#rw[key].load_results(data_dir+'/'+'rw_results/dyn.pkl')\n"
    ]
   },
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
    ],
    "source": [
     "rw[key].reweight(rw[key].priors, thetas)\n",
-    "rw[key].save_results(data_dir+'/'+'rw_results/dyn.pkl') #TODO\n",
+    "rw[key].save_results(data_dir+'/'+'rw_results/dyn') #TODO\n",
     "\n",
     "#rw[key].load_results(data_dir+'/'+'rw_results/dyn.pkl') #TODO\n"
    ]
@@ -3379,7 +3379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3418,7 +3418,7 @@
     "rw[key] = trbme.TimeResolvedBME(esaxs_dir=esaxs, meta_saxs=msaxs, bfile=bfile)\n",
     "#rw[key] = trbme.TimeResolvedBME(esaxs_dir=esaxs, meta_saxs=msaxs, bfile=bfile)\n",
     "rw[key].reweight(rw[key].w0, thetas)\n",
-    "#rw['metad'].save_results('rw_results/metad')\n",
+    "rw['metad'].save_results('rw_results/metad')\n",
     "#rw['metad'].load_results(data_dir+'/'+'rw_results/metad.pkl')"
    ]
   },
@@ -3801,7 +3801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3824,7 +3824,7 @@
     "w0 = np.ones(l)/l\n",
     "\n",
     "rw[key].reweight(w0, thetas)\n",
-    "#rw[key].save_results('rw_results/uniform')\n",
+    "rw[key].save_results('rw_results/uniform')\n",
     "#rw[key].load_results('rw_results/uniform.pkl')"
    ]
   },
